# code

./: .clang-format  .clang-tidy  .gitignore  809.txt  CMakeLists.txt  CMakePresets.json  README.md  example.lua  example.py  go.mod  go.work  go.work.sum  main.go  makefile  package.json  pyproject.toml
.config/fish/: config.fish
.config/ghostty/: config
.config/git/: config
.config/lazygit/: config.yml
.config/mihomo/: config.yaml
.config/nvim/: init.lua
.config/systemd/: mihomo.service  suspend.service
coding/: App.tsx  index.html  index.tsx  vite.config.ts
config/fish/: config.fish
config/lazygit/: config.yml
config/mihomo/: config.yaml
config/neovim/: example.lua  init.lua
config/postgresql/: example.sql
config/systemd/: clash.service  mihomo.service
fibonacci/: main.c
graph/: add.cpp  bfs.cpp  dfs.cpp  dijkstra.cpp  floyd.cpp  graph.cpp  graph.hpp  kruskal.cpp  main.cpp  prim.cpp
linear/: deque.cpp  linear.hpp  main.cpp  sparse_matrix.cpp  string_matching.cpp
linear_list/: circular_linked_list.c  circular_linked_list.cpp  doubly_linked_list.c  doubly_linked_list.cpp  linear_list.h  main.cpp  sequential_list.c  sequential_list.cpp  singly_linked_list.c  singly_linked_list.cpp  static_linked_list.c  static_linked_list.cpp
list/: circular_linked_list.cpp  doubly_linked_list.cpp  list.h  list.hpp  main.cpp  sequential_list.cpp  singly_linked_list.cpp  static_linked_list.cpp
mathematics/: main.md  trigonometric.md
mlp/: mlp_sklearn.py  mlp_torch.py  sklearn_.py  torch_.py
mnist/: main.py
networkx/: main.py
nyancat/: nyancat.py  nyancat.txt
nyancat_gif/: nyancat.py
operations_research/: mip.py
others/: deque.cpp  deque.h  deque.hpp  main.cpp  others.h  sparse_matrix.cpp  sparse_matrix.h  sparse_matrix.hpp  string_matching.cpp  string_matching.h  string_matching.hpp
proxy/: api.go  cert.go  cert.pem  config.go  config.yaml  ddns.go  forward.go  go.mod  go.sum  key.pem  main.go  reverse.go
proxy/cert/: cert.pem  key.pem
server/: __main__.py  _sklearn.py  _torch.py  api.proto  api.sh  api_pb2.py  api_pb2_grpc.py  example.sql  gen.sh  gin.go  go.mod  go.sum  gorm.go  grpc.go  main.go  mlp.py  postgre.sql  python.go
server/api/: api.pb.go  api.proto  api_grpc.pb.go  api_pb2.py  api_pb2_grpc.py
shortest_path/: bellman_ford.cpp  dijkstra.cpp  floyd_warshall.cpp  main.cpp  shortest_path.h
sort/: main.go  sort.go
sorting/: bubble_sort.c  bucket_sort.c  counting_sort.c  heap_sort.c  insertion_sort.c  main.c  merge_sort.c  quick_sort.c  radix_sort.c  selection_sort.c  shell_sort.c  swap.c
sorting_algorithm/: array_utilities.c  bubble_sort.c  bubble_sort.cpp  bucket_sort.c  bucket_sort.cpp  counting_sort.c  counting_sort.cpp  heap_sort.c  heap_sort.cpp  insertion_sort.c  insertion_sort.cpp  main.c  main.cpp  merge_sort.c  merge_sort.cpp  quick_sort.c  quick_sort.cpp  radix_sort.c  radix_sort.cpp  selection_sort.c  selection_sort.cpp  shell_sort.c  shell_sort.cpp  sorting_algorithm.c  sorting_algorithm.h  swap.c  test.c
src/asio/: main.cpp
src/client/: main.cpp
src/cpp11/: main.cpp
src/cpp14/: main.cpp
src/cpp17/: main.cpp
src/cpp20/: main.cpp  math.cppm  test.cppm
src/cpp23/: import_std.cc  import_std.cpp  main.cpp
src/cpp26/: main.cpp  reflection.cc
src/feature/: cpp11.cpp  cpp14.cpp  cpp17.cpp  cpp20.cpp  cpp20.cppm  cpp23.cpp  cpp26.cc  cpp26.cpp  cpp_standards.hpp  feature.hpp  main.cpp
src/graph/: bfs.cpp  dfs.cpp  dijkstra.cpp  floyd.cpp  graph.cpp  graph.hpp  kruskal.cpp  prim.cpp
src/gtest/: best_time_to_buy_and_sell_stock.cpp  binary_tree_inorder_traversal.cpp  climbing_stairs.cpp  convert_sorted_array_to_binary_search_tree.cpp  test.cpp  (+17 more)
tree/: bst.cpp  huffman.cpp  main.cpp  tree.hpp
web/: App.tsx  index.css  index.html  index.tsx  vite.config.ts
win/: win.py
(+140 files in other folders)
