cmake_minimum_required(VERSION 4.2)
project(code)
find_package(asio)
find_package(llhttp)
find_package(stdexec)
set(CMAKE_CXX_STANDARD 26)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
file(GLOB dirs "src/*")
foreach(dir ${dirs})
  if(IS_DIRECTORY "${dir}")
    get_filename_component(name "${dir}" NAME)
    file(GLOB sources CONFIGURE_DEPENDS "${dir}/*.c" "${dir}/*.cpp")
    file(GLOB headers CONFIGURE_DEPENDS "${dir}/*.h" "${dir}/*.hpp")
    file(GLOB modules CONFIGURE_DEPENDS "${dir}/*.cppm")
    add_executable(${name})
    target_sources(${name} PRIVATE ${sources})
    target_sources(${name} PRIVATE FILE_SET HEADERS FILES ${headers})
    target_sources(${name} PRIVATE FILE_SET CXX_MODULES FILES ${modules})
    if("${name}" STREQUAL "client" OR "${name}" STREQUAL "server")
      target_link_libraries(${name} asio::asio)
      target_link_libraries(${name} llhttp::llhttp_static)
    endif()
    if("${name}" STREQUAL "stdexec")
      target_link_libraries(${name} STDEXEC::stdexec)
      set_target_properties(${name} PROPERTIES CXX_SCAN_FOR_MODULES OFF)
    endif()
  endif()
endforeach()
