cmake_minimum_required(VERSION 4.3)
project(code)
set(CMAKE_CXX_STANDARD 26)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
file(GLOB paths "src/*")
foreach(path ${paths})
  if(IS_DIRECTORY "${path}")
    get_filename_component(name "${path}" NAME)
    file(GLOB sources CONFIGURE_DEPENDS "${path}/*.c" "${path}/*.cpp")
    file(GLOB headers CONFIGURE_DEPENDS "${path}/*.h" "${path}/*.hpp")
    file(GLOB modules CONFIGURE_DEPENDS "${path}/*.cppm")
    add_executable(${name})
    target_sources(${name} PRIVATE ${sources})
    target_sources(${name} PRIVATE FILE_SET HEADERS FILES ${headers})
    target_sources(${name} PRIVATE FILE_SET CXX_MODULES FILES ${modules})
    if("${name}" STREQUAL "gtest")
      find_package(GTest)
      target_link_libraries(${name} GTest::gtest GTest::gtest_main)
    endif()
    if("${name}" STREQUAL "server")
      find_package(asio)
      find_package(llhttp)
      target_link_libraries(${name} asio::asio)
      target_link_libraries(${name} llhttp::llhttp_static)
    endif()
    if("${name}" STREQUAL "stdexec")
      find_package(stdexec)
      target_link_libraries(${name} STDEXEC::stdexec)
      set_target_properties(${name} PROPERTIES CXX_SCAN_FOR_MODULES OFF)
    endif()
  endif()
endforeach()
